C++II/.metadata/.plugins/org.eclipse.cdt.ui/Choices.build.log
15:05:51 **** Incremental Build of configuration Debug for project Choices ****
make all 
Building file: ../src/Choices.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Choices.d" -MT"src/Choices.o" -o "src/Choices.o" "../src/Choices.cpp"
../src/Choices.cpp: In function ‘int main()’:
../src/Choices.cpp:64:4: warning: suggest explicit braces to avoid ambiguous ‘else’ [-Wparentheses]
 if (L1 < L2)
    ^
../src/Choices.cpp:71:1: error: ‘else’ without a previous ‘if’
 else
 ^
make: *** [src/Choices.o] Error 1

15:05:51 Build Finished (took 261ms)

